swagger integration phase-II
