# routes/api.php
@@ -8,7 +8,7 @@ use Illuminate\Support\Facades\Route;
 | API Routes
 |--------------------------------------------------------------------------
 |
-| Here is where you can register API routes for your application. These
+| Here is where you can register API routes for your applicatasktion. These
 | routes are loaded by the RouteServiceProvider within a group which
 | is assigned the "api" middleware group. Enjoy building your API!
 |
@@ -16,4 +16,12 @@ use Illuminate\Support\Facades\Route;
 
 Route::middleware('auth:api')->get('/user', function (Request $request) {
     return $request->user();
+});
+Route::post("/login",[\App\Http\Controllers\AuthController::class,'login']);
+Route::post("/register",[\App\Http\Controllers\AuthController::class,'register']);
+Route::middleware(['auth:sanctum'])->group(function(){
+    Route::get("/task",[\App\Http\Controllers\TaskController::class,'get']);
+    Route::post("/task",[\App\Http\Controllers\TaskController::class,'post']);
+    Route::put("/task",[\App\Http\Controllers\TaskController::class,'put']);
+    Route::delete("/task",[\App\Http\Controllers\TaskController::class,'delete']);
 });
